# f2c-feedstock

./: .travis.yml  README.md  conda-forge.yml
.ci_support/: osx_64_.yaml  osx_arm64_.yaml
.github/: CODEOWNERS
recipe/: MAIN_stub.c  bld.bat  build.sh  f2c.pc  freebsd-86884.patch  libf2c.arithchk.patch  libf2c.makefile.u.patch  meta.yaml  patch_arithchk
recipe/cmake/: CMakeLists.txt
recipe/cmake/cmake/: Config.cmake.in
recipe/patches/: f2c.h0.patch  signal_.c.patch  wsfe.c.patch
